; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/winetests/winhttp/extr_notification.c_open_socket_request.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/winetests/winhttp/extr_notification.c_open_socket_request.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.test_request = type { i32 }
%struct.info = type { i32 }

@open_socket_request.socketW = internal constant [8 x i8] c"/socket\00", align 1
@server_socket_done = common dso_local global i32 0, align 4
@FALSE = common dso_local global i32 0, align 4
@server_socket_available = common dso_local global i32 0, align 4
@INFINITE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, %struct.test_request*, %struct.info*)* @open_socket_request to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @open_socket_request(i32 %0, %struct.test_request* %1, %struct.info* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.test_request*, align 8
  %6 = alloca %struct.info*, align 8
  store i32 %0, i32* %4, align 4
  store %struct.test_request* %1, %struct.test_request** %5, align 8
  store %struct.info* %2, %struct.info** %6, align 8
  %7 = load i32, i32* @server_socket_done, align 4
  %8 = call i32 @ResetEvent(i32 %7)
  %9 = load i32, i32* %4, align 4
  %10 = load %struct.test_request*, %struct.test_request** %5, align 8
  %11 = load %struct.info*, %struct.info** %6, align 8
  %12 = load i32, i32* @FALSE, align 4
  %13 = call i32 @open_async_request(i32 %9, %struct.test_request* %10, %struct.info* %11, i8* getelementptr inbounds ([8 x i8], [8 x i8]* @open_socket_request.socketW, i64 0, i64 0), i32 %12)
  %14 = load i32, i32* @server_socket_available, align 4
  %15 = load i32, i32* @INFINITE, align 4
  %16 = call i32 @WaitForSingleObject(i32 %14, i32 %15)
  ret void
}

declare dso_local i32 @ResetEvent(i32) #1

declare dso_local i32 @open_async_request(i32, %struct.test_request*, %struct.info*, i8*, i32) #1

declare dso_local i32 @WaitForSingleObject(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
